bk_ida/gccida/g1/timevar_pop
/data/output_dir/patch/gcc/ida/gcc/O1/gcc-gcc-O1/timevar_pop/src/timevar.c:779:6: error: use of undeclared identifier 'stack_0'; did you mean 'stack'?
v1 = stack_0; 
     ^~~~~~~
     stack
/data/output_dir/patch/gcc/ida/gcc/O1/gcc-gcc-O1/timevar_pop/src/timevar.c:160:34: note: 'stack' declared here
static struct timevar_stack_def *stack;
                                 ^
/data/output_dir/patch/gcc/ida/gcc/O1/gcc-gcc-O1/timevar_pop/src/timevar.c:780:6: error: use of undeclared identifier 'stack_0'; did you mean 'stack'?
if ( stack_0->timevar != &timevars[timevar] ) 
     ^~~~~~~
     stack
/data/output_dir/patch/gcc/ida/gcc/O1/gcc-gcc-O1/timevar_pop/src/timevar.c:160:34: note: 'stack' declared here
static struct timevar_stack_def *stack;
                                 ^
/data/output_dir/patch/gcc/ida/gcc/O1/gcc-gcc-O1/timevar_pop/src/timevar.c:785:1: error: use of undeclared identifier 'stack_0'; did you mean 'stack'?
stack_0 = v1->next; 
^~~~~~~
stack
/data/output_dir/patch/gcc/ida/gcc/O1/gcc-gcc-O1/timevar_pop/src/timevar.c:160:34: note: 'stack' declared here
static struct timevar_stack_def *stack;
                                 ^
3 errors generated.
make: *** [/data/output_dir/patch/gcc/ida/gcc/O1/gcc-gcc-O1/timevar_pop/src/obj/timevar.o] Error 1
